implementa game over

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="game-board">
-
+        <img src="./images/game-over-imagem.png" class="game-over">
         <img src="./images/clouds.png" class="cloud">
         <img src="./images/mario.gif" class="mario">
         <img src="./images/pipe.png" class="pipe">
